Fix project transitions, get rid of mobile white space

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,7 +17,7 @@ html {
 }
 
 #about, #projects, #skills, #contact  {
-    padding-top: 100px;
+    padding-top: 75px;
 }
 // SVG Image background provided by SVGBackgrounds.com.
 body {
@@ -140,7 +140,6 @@ nav {
     background-color: #26262b;
     display: flex;
     justify-content: center;
-    padding-bottom: 100px;
 }
 
 .about header {
@@ -256,6 +255,7 @@ nav {
     width: 100%;
     height: 800px;
     background-color: #26262b;
+    overflow-x: hidden;
 }
 
 .project-work header {
@@ -263,7 +263,6 @@ nav {
     align-items: center;
     justify-content: center;
     width: 100%;
-    margin-top: 25px;
 }
 
 
@@ -327,15 +326,17 @@ nav {
     text-align: center;
 }
 
-// .project-list li:nth-of-type(odd) {
-//     transform: translateX(-50em);
-//     transition: transform 1s;
-// }
+.odd-items {
+    // display: none;
+    transform: translateX(-100em);
+    transition: transform 1s;
+}
 
-// .project-list li:nth-of-type(even) {
-//     transform: translateX(50em);
-//     transition: transform 1s;
-// }
+.even-items {
+    // display: none;
+    transform: translateX(100em);
+    transition: transform 1s;
+}
 
 .img-container img {
     height: 400px;
@@ -474,9 +475,9 @@ nav {
         
     }
 
-    #about, #projects, #skills, #contact {
-        padding-top: 115px;
-    }
+    // #about, #projects, #skills, #contact {
+    //     padding-top: 115px;
+    // }
     .nav-links {
         display: flex;
         justify-content: space-around;
@@ -506,7 +507,7 @@ nav {
         height: 1100px;
     }
 
-    .project-work ul {
+    .project-list {
         height: 800px;
         grid-gap: 3em;
     }
